Working config (wasn't able to have different node/validator key, `skip_sync_wait` needs to be false)

--- a/boot/local/node0/config.json
+++ b/boot/local/node0/config.json
@@ -47,7 +47,7 @@
       "secs": 60,
       "nanos": 0
     },
-    "skip_sync_wait": true,
+    "skip_sync_wait": false,
     "ban_window": {
       "secs": 10800,
       "nanos": 0
